# shotsort

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  shotsort.toml.example
src/: cli.rs  config.rs  datesrc.rs  engine.rs  filetype.rs  guard.rs  journal.rs  main.rs  plan.rs  report.rs  scan.rs  template.rs  types.rs  undo.rs  util.rs
tests/: cli.rs
