[package]
name = "shotsort"
version = "0.1.0"
edition = "2024"
description = "In-card photo/video organizer: move media out of DCIM into capture-date folders on the same card using atomic renames."
license = "MIT"
readme = "README.md"
keywords = ["photography", "exif", "sd-card", "dcim", "organizer"]
categories = ["command-line-utilities", "filesystem"]
repository = "https://github.com/BoJiang03/shotsort"

[profile.release]
lto = true
strip = true

[dependencies]
anyhow = "1.0.102"
blake3 = "1.8.5"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.18.4"
kamadak-exif = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
walkdir = "2.5.0"
